# Rover_Scan

./: README.md
crack_scan_sim/: package.xml  setup.cfg  setup.py
crack_scan_sim/config/: plate_config.yaml
crack_scan_sim/crack_scan_sim/: matrix_visualization_node.py  rover_position_node.py  sensor_position_node.py  sensor_value_node.py
crack_scan_sim/launch/: scan_pipeline.launch.py
